--- a/src/components/produtos/listaProdutos/ListarProdutos.css
+++ b/src/components/produtos/listaProdutos/ListarProdutos.css
@@ -10,7 +10,7 @@
 .cardProdutos{
     background: #f0aef4!important;
     border: 1px solid white!important;
-    height: 38em!important;
+    height: 100%em!important;
     width: 25em!important;
 }
 
