--- a/src/paginas/contato/Contato.css
+++ b/src/paginas/contato/Contato.css
@@ -10,7 +10,7 @@
 
 .cardSobreNos{
     width: 100%;
-    height: 25vw;
+    height: 20vw;
     background: linear-gradient(360deg,  #d391d0 1%, #cf84ca 80%)!important;
     border-radius: 2%;
     box-shadow: 0.4em 0.4em #c365c6;
@@ -70,7 +70,7 @@
     
     background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
     width: 40vh;
-    height: 11em;
+    height: 100%;
     min-height: 5px;
     text-align: center;
     border-radius: 10%!important;
@@ -89,7 +89,7 @@
 .cardSobre:hover{
     background: linear-gradient(36deg,  #ffffff 1%, #671a62 78%)!important;
     width: 40vh;
-    height: 15em;
+    height: 100%;
     text-align: center;
     border-radius: 10%!important;
     box-shadow: 8px 8px #e7cd44!important;
